--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "expo-av": "~13.10.5",
+    "typescript": "^5.3.0",
+    "@types/react": "~18.2.45",
+    "@shopify/flash-list": "1.6.3",
+    "expo-dev-client": "~3.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
