--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "fnbrmena",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,28 +10,29 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@types/react": "~18.2.45",
     "axios": "^1.6.8",
     "expo": "~50.0.14",
-    "expo-cached-image": "^50.0.6",
+    "expo-av": "~13.10.5",
+    "expo-constants": "^15.4.5",
     "expo-file-system": "^16.0.8",
+    "expo-font": "~11.10.3",
     "expo-image": "~1.10.6",
+    "expo-media-library": "~15.9.1",
+    "expo-navigation-bar": "~2.8.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "expo-av": "~13.10.5",
-    "typescript": "^5.3.0",
-    "@types/react": "~18.2.45",
-    "@shopify/flash-list": "1.6.3",
-    "expo-dev-client": "~3.3.11"
+    "react-native-svg": "^14.1.0",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
