--- a/package.json
+++ b/package.json
@@ -17,24 +17,27 @@
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.45",
     "axios": "^1.6.8",
-    "expo": "~50.0.14",
-    "expo-av": "~13.10.5",
-    "expo-constants": "^15.4.5",
+    "expo": "~50.0.17",
+    "expo-av": "~13.10.6",
+    "expo-constants": "~15.4.6",
     "expo-file-system": "^16.0.8",
     "expo-font": "~11.10.3",
     "expo-image": "~1.10.6",
-    "expo-media-library": "~15.9.1",
+    "expo-linear-gradient": "~12.7.2",
+    "expo-media-library": "~15.9.2",
     "expo-navigation-bar": "~2.8.1",
     "expo-status-bar": "~1.11.1",
+    "i18next": "^23.11.2",
     "react": "18.2.0",
+    "react-i18next": "^14.1.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
-    "typescript": "^5.3.0",
-    "expo-linear-gradient": "~12.7.2"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
