--- a/app.json
+++ b/app.json
@@ -28,7 +28,12 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-font"
+      [
+        "expo-font",
+        {
+          "fonts": ["./assets/fonts/BurbankSmall-Black.otf", "./assets/fonts/Arabic.ttf", "./assets/fonts/BurbankBigCondensed-Black.ttf"]
+        }
+      ]
     ],
     "extra": {
       "eas": {
