--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native": "0.73.6",
     "react-native-flexible-grid": "^0.1.8",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-maps": "1.10.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-restart": "^0.0.27",
@@ -40,7 +41,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
     "react-native-toast-message": "^2.2.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "react-native-webview": "13.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
