--- a/package.json
+++ b/package.json
@@ -11,38 +11,39 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/portal": "^1.0.14",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
     "axios": "^1.6.8",
-    "expo": "~50.0.17",
-    "expo-av": "~13.10.6",
-    "expo-constants": "~15.4.6",
-    "expo-file-system": "^16.0.8",
-    "expo-font": "~11.10.3",
-    "expo-image": "~1.10.6",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-media-library": "~15.9.2",
-    "expo-navigation-bar": "~2.8.1",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.2",
+    "expo-av": "~14.0.4",
+    "expo-constants": "~16.0.1",
+    "expo-file-system": "~17.0.1",
+    "expo-font": "~12.0.4",
+    "expo-image": "~1.12.9",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-media-library": "~16.0.3",
+    "expo-navigation-bar": "~3.0.4",
+    "expo-status-bar": "~1.12.1",
+    "firebase": "^10.11.1",
     "i18next": "^23.11.2",
     "react": "18.2.0",
     "react-i18next": "^14.1.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-flexible-grid": "^0.1.8",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-maps": "1.10.0",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-maps": "1.14.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-restart": "^0.0.27",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-toast-message": "^2.2.0",
-    "typescript": "^5.3.0",
-    "react-native-webview": "13.6.4"
+    "react-native-webview": "13.8.6",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
