--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.79",
     "axios": "^1.6.8",
-    "expo": "^51.0.2",
-    "expo-av": "~14.0.4",
-    "expo-constants": "~16.0.1",
+    "expo": "~51.0.14",
+    "expo-av": "~14.0.5",
+    "expo-constants": "~16.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.4",
-    "expo-image": "~1.12.9",
+    "expo-image": "~1.12.12",
     "expo-linear-gradient": "~13.0.2",
     "expo-media-library": "~16.0.3",
-    "expo-navigation-bar": "~3.0.4",
+    "expo-navigation-bar": "~3.0.6",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.11.1",
     "i18next": "^23.11.2",
     "react": "18.2.0",
     "react-i18next": "^14.1.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-flexible-grid": "^0.1.8",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
