--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -13,19 +13,23 @@
     "@gorhom/portal": "^1.0.14",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.79",
     "axios": "^1.6.8",
-    "expo": "~51.0.14",
-    "expo-av": "~14.0.5",
+    "color": "^4.2.3",
+    "expo": "~51.0.17",
+    "expo-av": "~14.0.6",
     "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.4",
     "expo-image": "~1.12.12",
     "expo-linear-gradient": "~13.0.2",
-    "expo-media-library": "~16.0.3",
+    "expo-media-library": "~16.0.4",
     "expo-navigation-bar": "~3.0.6",
+    "expo-notifications": "~0.28.9",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.11.1",
     "i18next": "^23.11.2",
@@ -43,7 +47,9 @@
     "react-native-svg": "15.2.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-webview": "13.8.6",
-    "typescript": "~5.3.3"
+    "reanimated-color-picker": "^3.0.4",
+    "typescript": "~5.3.3",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
