--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.11.1",
     "i18next": "^23.11.2",
+    "immer": "^10.1.1",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-i18next": "^14.1.0",
     "react-native": "0.74.2",
